feat: improved session serialization debug tool
The tool no works only with --add-opens and extendedDebugInfo system property.
Unserializable objects are replaced by null and restored during deserialization
to avoid NPEs.
Object with throwing toString are replaced with an object capable to
serialize fields and regenerate the original object type on
deserialization.

Fixes #45